turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:20: error: identifier expected but integer literal found.
var rule:Array[Array[Array[Int]]] = T[U[V[0]]]
                                          ^Turmite:21: error: ']' expected but ';' found.
var nbSteps:Int = 8342;
^Turmite:53: error: ')' expected but ';' found.
  setPos(8;33)
          ^Turmite:53: error: ';' expected but ')' found.
  setPos(8;33)
             ^